syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto";

package supernode;

service SuperNode {
    rpc RegisterArtowrk(stream RegisterArtworkRequest) returns (stream RegisterArtworkReply);
}

message RegisterArtworkRequest {
    message HandshakeRequest {
        string connID = 1;
        string node_key = 2;
    }

    oneof requests {
        HandshakeRequest handshake = 1;
    }
}

message RegisterArtworkReply {
    message Error {
        enum Status {
            OK = 0;
            ERR = 1;
        }
        Status status = 1;
        string errMsg = 2;
    }
    message HandshakeReply {
        Error error = 1;
    }

    oneof replies {
        HandshakeReply handshake = 1;
    }
}




